--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -9,11 +9,27 @@ env:
 
 jobs:
   build-and-push:
+    name: Build and push to ghcr.io
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@v5
         with:
           fetch-depth: 0
+
+      - name: Check and update Cargo.toml version if necessary
+        run: |
+          TAG_VERSION="${{ github.event.release.tag_name }}"
+          VERSION="${TAG_VERSION#v}"
+          CARGO_VERSION=$(grep '^version = ' Cargo.toml | head -1 | sed 's/version = "\(.*\)"/\1/')
+
+          if [ "$VERSION" != "$CARGO_VERSION" ]; then
+            echo "⚠️  Version mismatch detected! Updating Cargo.toml from $CARGO_VERSION to $VERSION"
+            sed -i.bak "s/^version = \".*\"/version = \"$VERSION\"/" Cargo.toml
+            rm Cargo.toml.bak 2>/dev/null || true
+            echo "✅ Cargo.toml updated successfully"
+          else
+            echo "✅ Versions match, no update needed"
+          fi
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
@@ -35,13 +51,14 @@ jobs:
           platforms: linux/amd64
 
   flux-update:
+    name: Update Flux Deployment image tag
     needs: [build-and-push]
     runs-on: ubuntu-latest
     env:
       VERSIONTAG: ${{ github.event.release.tag_name }}
     steps:
       - name: Checkout flux repository
-        uses: actions/checkout@v4
+        uses: actions/checkout@v5
         with:
           repository: stenstromen/flux
           token: ${{ secrets.KUBE_GITHUB_TOKEN }}
